Fix ContextMenu broken layout on some cases

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,6 +3,10 @@
 @tailwind components;
 
 @layer components {
+    .vuefinder {
+        position: relative;
+    }
+
     .vuefinder * {
         touch-action: manipulation;
     }
